Fix edge bleed on print

--- a/src/css/sheet.scss
+++ b/src/css/sheet.scss
@@ -704,6 +704,7 @@ div.col-section-title {
 }
 .inventory-grid > div.inventory-title {
   grid-column-end: span 3;
+  margin: 0;
 }
 div.col-section-label {
   font-size: 0.75em;
